disable all build warnings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,6 +72,7 @@ set(KINESIS_VIDEO_PIC_SRC ${CMAKE_CURRENT_SOURCE_DIR})
 set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(Threads)
 
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -w")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
 
 if(MSVC)
